Bug 1125391 - Re-enable bug 931668 optimizations. r=dbaron